<resources>
    <string name="app_name">LuisAngelOrtegaAndroid2019</string>
    <string name="your_score">Your Score: %s</string>
    <string name="time_left">Time Left: %s</string>
    <string name="tap_me">TAP ME</string>
    <string name="android_2019">Android 2019</string>
    <string name="time_figther">Time Fighter</string>
    <string name="hello_world">Hello World</string>
    <string name="game_over">Times up! Your score was: %s</string>
    <string name="fahrenheit">Fahrenheit...</string>
    <string name="convert">Convert to ℃</string>
    <string name="celsius">The temperature is %s ℃</string>
    <string name="ftoc">℉ to ℃</string>
    <string name="dialog_button">Dialog</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="hint_nombre">Name...</string>
    <string name="hint_password">Password...</string>
    <string name="hint_email">Email...</string>
    <string name="login">Login</string>
    <string name="cancelar">Cancel</string>
    <string name="dialog_mgmt">Dialog Management</string>
    <string name="playground">Playground</string>
    <string name="author">Luis Angel Ortega / @LinkSake</string>
    <string name="tap">Tap me</string>
    <string name="show_img">Show Image</string>
    <string name="quit">Quit</string>
    <string name="show_toast">Show toast</string>
    <string name="loop">loop</string>
    <string name="confimation">Are you sure?</string>
    <string name="imc">IMC</string>
    <string name="name">Name:</string>
    <string name="fName">Father\'s Name:</string>
    <string name="mName">Mother\'s Name:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="scan">Scan</string>
    <string name="picture">Picture:</string>
    <string name="status">Status:</string>
    <string name="IMCstatus">Your IMC is </string>
    <string name="allRequired">You need to fill all the fields</string>
    <string name="result_not_found">Result not found</string>
    <string name="Janken">janken</string>
    <string name="hint_lastname">Last Name...</string>
    <string name="hint_time">Time..</string>
    <string name="shared_pref">Shared Preferences</string>
</resources>
