<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
    android:id="@+id/txtName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_nombre"
    />

    <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
    />

    <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
    />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnDialogCancel"
                android:text="@string/cancelar"
        />

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnDialogLogin"
                android:text="@string/login"
        />

    </LinearLayout>




</LinearLayout>