<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SharedPreferences">

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="145dp"
            android:layout_height="159dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/confused_cat" />

    <EditText
            android:id="@+id/etNameSP"
            android:layout_width="341dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_nombre"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
            android:id="@+id/etLastNameSP"
            android:layout_width="341dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_lastname"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNameSP" />

    <EditText
            android:id="@+id/etEmailSP"
            android:layout_width="341dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLastNameSP" />

    <EditText
            android:id="@+id/etTimeSP"
            android:layout_width="341dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_time"
            android:inputType="time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmailSP" />

    <Button
            android:id="@+id/btnCancelSP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/btnSaveSP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>